--- a/join_cluster/tasks/main.yml
+++ b/join_cluster/tasks/main.yml
@@ -1,13 +1,16 @@
-- name: printing join command
+- name: "Printing join command"
   command: "kubeadm token create --print-join-command"
-  register: x
+  register: join_token
   when: inventory_hostname in groups['master']
-- stat:
+
+- name: "Ensure that worker node in join the master or not"
+  stat:
         path: "/etc/kubernetes/pki/ca.crt"      
   register: check
-  when: inventory_hostname in groups['worker']  
+  when: inventory_hostname in groups['worker'] 
+
 - name: joining the worker node
-  command: "{{ hostvars[item]['x']['stdout'] }}"
+  command: "{{ hostvars[item]['join_token']['stdout'] }}"
   with_items: "{{ groups['master'] }}"
   when:
           - inventory_hostname in groups['worker']
