--- a/k8s_master/tasks/main.yml
+++ b/k8s_master/tasks/main.yml
@@ -15,9 +15,11 @@
   template:
           dest: "/etc/sysctl.d/k8s.conf"
           src: k8s.conf
+  register: network_conf
 
 - name: "Starting sysctl service"
   shell: "sysctl --system"
+  when: network_conf['changed'] == True
 
 - name: "Check If kubeadm Has Already Run or Not"
   stat:
