--- a/k8s_worker/tasks/docker.yml
+++ b/k8s_worker/tasks/docker.yml
@@ -8,15 +8,35 @@
           gpgcheck: no
   when: ansible_facts['distribution'] == "RedHat" or ansible_facts['distribution'] == "CentOS" or  ansible_facts['distribution'] == "Fedora"
 
+- name: "Ensure old versions of Docker are not installed in [Debian/Ubuntu]"
+  package:
+           name:
+                   - docker
+                   - docker-engine
+           state: absent
+   when: ansible_facts['distribution'] == "Debian" or ansible_facts['distribution'] == "Ubuntu"
+
+- name: "Ensure dependencies are installed in [Debian/Ubuntu]"
+  apt:
+          name:
+                  - apt-transport-https
+                  - ca-certificates
+                  - gnupg2
+          state: present
+  when: ansible_facts['distribution'] == "Debian" or ansible_facts['distribution'] == "Ubuntu"
+
 
 - name: "Adding the GPG key for the official Docker Repository for [Debian/Ubuntu]"
-  shell: "curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -"
+  apt_key:
+          url: "https://download.docker.com/linux/ubuntu/gpg"
+          state: present
   when: ansible_facts['distribution'] == "Debian" or ansible_facts['distribution'] == "Ubuntu"
 
 - name: "Add specified repository into sources list using specified filename for [Debian/Ubuntu]"
   apt_repository:
           repo: "deb [arch=amd64] https://download.docker.com/linux/ubuntu bionic stable"
           state: present
+          update_cache: true
           filename: docker
   when: ansible_facts['distribution'] == "Debian" or ansible_facts['distribution'] == "Ubuntu"
 
@@ -42,7 +62,7 @@
 
 - name: "Starting Docker Service"
   service:
-          name: "docker"
+          name:  "docker"
           state: started
           enabled: yes
 
@@ -50,9 +70,11 @@
   template:
           dest: "/etc/docker/daemon.json"
           src: "daemon.json"
+  register: docker_conf
 
 - name: "Restarting Docker Sevice"
   service:
           name: "docker"
           state: restarted
           enabled: yes
+  when: docker_conf['changed'] == True
