--- a/k8s_worker/tasks/main.yml
+++ b/k8s_worker/tasks/main.yml
@@ -12,6 +12,8 @@
   template:
           dest: "/etc/sysctl.d/k8s.conf"
           src: k8s.conf
+  register: network_conf
 
 - name: "Starting sysctl service"
   shell: "sysctl --system"
+  when: network_conf['changed'] == True
