--- a/setup.yml
+++ b/setup.yml
@@ -4,5 +4,5 @@
           - role: k8s_master
             when: inventory_hostname in groups['tag_Name_kubeMaster']
           - role: k8s_worker
-            when: inventory_hostname in groups['tag_Name_kubeWroker']
+            when: inventory_hostname in groups['tag_Name_kubeWorker']
           - role: join_cluster
